# diy

./: .gitignore  .ruff.toml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: examples.yaml  pages.yaml  validate.yaml
docs/: decisions.md  index.md
docs/examples/weather/: index.md  mvp.md  protocol.md  real.md  structure.md
docs/guide/: cli.md  containers.md  specifications.md  tooling.md
docs/internals/: index.md
docs/reference/: api-docs.md  guiding-principles.md
examples/: index.html
examples/weather/: README.md  pyproject.toml  requirements.txt
examples/weather/weather/: cli.py  container.py  http.py  http_test.py
examples/weather/weather/client/: constant.py  protocol.py  random.py  wheatherapidotcom.py  wheatherapidotcom_test.py
examples/wheather/: index.html  pyproject.toml  requirements.txt
examples/wheather/wheather/: cli.py  container.py
examples/wheather/wheather/client/: abstract.py  open_meteo.py  random.py
guide/: index.html
guide/containers/: index.html
guide/specifications/: index.html
reference/api-docs/: index.html
reference/changelog/: index.html
reference/guiding-principles/: index.html
search/: search_index.json
src/diy/: __init__.py  container.py  debug.py  errors.py  examples.py  exception.py  invocation.py  invokation_test.py  plan.py  resolution.py  resolution_test.py  specification.py  validation.py
src/diy/cli/: __init__.py  parameters.py
src/diy/cli/commands/: config.py  plan.py  root.py
src/diy/cli/config/: resolve.py  schema.py
src/diy/cli/container/: resolve.py
src/diy/cli/utils/: import_specifiers.py
src/diy/container/: default.py  runtime.py  verifying.py
src/diy/internal/: display.py  display_test.py  plan.py  planner.py  validation.py  verification.py
src/diy/specification/: default.py  protocol.py
tests/: container_test.py  specification_test.py  verification_test.py
tests/internal/: display_test.py
