[project]
name = "diy"
version = "0.1.0"
description = "A dependency injection container utilizing type annotations."
authors = [{ name = "Niclas van Eyk", email = "niclas.eyk@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE.md" }
dependencies = ["click>=8.1.7"]
requires-python = ">= 3.12"

[tool.rye]
virtual = true
managed = true
dev-dependencies = [
  "coverage>=7.4.4",
  "griffe-inherited-docstrings>=1.0.0",
  "mkdocs-material>=9.5.17",
  "mkdocstrings[python]>=0.25.0",
  "pyright>=1.1.368",
  "pytest-cov>=5.0.0",
  "pytest-watcher>=0.4.2",
  "pytest>=8.1.1",
  "ruff>=0.3.5",
]

[tool.rye.scripts]
tests = "pytest --cov --cov-branch packages"
"docs:serve" = "mkdocs serve"
"docs:build" = "mkdocs build"

[tool.rye.workspace]
members = ["packages/*", "examples/*"]

[tool.coverage.run]
omit = ["*_test.py"]

[tool.basedpyright]
reportAny = false
reportUnusedCallResult = false
